[package]
name = "oridion"
version = "0.1.0"
description = "Solana Galaxy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oridion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
#ahash = "=0.8.6"
anchor-lang = "0.29.0"
sha256 = "1.5.0"
solana-program = "1.17.15"
#magic-crypt = "3.1.13"
