[package]
name = "oridion"
version = "0.1.1"
description = "Solana Galaxy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oridion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
sha256 = "1.5.0"
solana-program = "1.18.13"